test/data/resolver/valid/parameter_across_with_alias_shadow.cypher
MATCH (a:Person) WITH a.name AS a MATCH (a:Post) WHERE a.title = $p RETURN a
