test/data/resolver/invalid/parameter_across_with_alias_shadow_reversed.cypher
MATCH (a:Post) WITH a.title AS a MATCH (a:Person) WHERE a.title = $p RETURN a
